--- a/title.tex
+++ b/title.tex
@@ -14,6 +14,6 @@ ipsum
 \end{abstract}
 
 \noindent\textbf{Keywords}: Climate impacts, Input-output supply chain interlinkages, Pro-
-duction network, Spillovers, Weather shocks, Monetary Policy
+duction network, Spillovers, Weather shocks, Monetary Policy \\
 \textbf{JEL Codes}:E23, E32, E52, L14, O11, Q54, R15,
 \newpage
