--- a/climate_sereno.tex
+++ b/climate_sereno.tex
@@ -847,8 +847,8 @@ inflation}\label{local-effects-of-abnormal-weather-on-sectoral-inflation}
 
 }
 
-\caption{\label{fig-baseline_direct}Local effects of temperature shocks
-on sectoral inflation}
+\caption{\label{fig-baseline_direct}Local effects of weather shocks on
+sectoral inflation}
 
 \end{figure}%
 
@@ -863,8 +863,8 @@ inflation}\label{network-effects-of-weather-shocks-on-sectoral-inflation}
 
 }
 
-\caption{\label{fig-baseline_network}Network effects of temperature
-shocks on sectoral inflation}
+\caption{\label{fig-baseline_network}Network effects of weather shocks
+on sectoral inflation}
 
 \end{figure}%
 
@@ -2426,12 +2426,12 @@ percentiles}\label{baseline-results-at-10th-and-90th-percentiles}
 
 \centering{
 
-\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_temp_10_90-1.png}
+\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_local_10_90-1.png}
 
 }
 
-\caption{\label{fig-baseline_temp_10_90}Baseline model: domestic and
-foreign effects of temperature shocks on sectoral inflation}
+\caption{\label{fig-baseline_local_10_90}Local effects of temperature
+shocks on sectoral inflation (10th and 90th percentiles)}
 
 \end{figure}%
 
@@ -2439,12 +2439,12 @@ foreign effects of temperature shocks on sectoral inflation}
 
 \centering{
 
-\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_precip_10_90-1.png}
+\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_network_10_90-1.png}
 
 }
 
-\caption{\label{fig-baseline_precip_10_90}Baseline model: domestic and
-foreign effects of precipitation shocks on sectoral inflation}
+\caption{\label{fig-baseline_network_10_90}Network effects of weather
+shocks on sectoral inflation (10th and 90th percentiles)}
 
 \end{figure}%
 
@@ -2455,13 +2455,12 @@ shocks}\label{baseline-results-with-standardised-shocks}
 
 \centering{
 
-\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_temp_std-1.png}
+\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_local_std-1.png}
 
 }
 
-\caption{\label{fig-baseline_temp_std}Baseline model: domestic and
-foreign effects of temperature standardised shocks on sectoral
-inflation}
+\caption{\label{fig-baseline_local_std}Local effects of temperature
+shocks on sectoral inflation (standardised shocks)}
 
 \end{figure}%
 
@@ -2469,13 +2468,12 @@ inflation}
 
 \centering{
 
-\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_precip_std-1.png}
+\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_network_std-1.png}
 
 }
 
-\caption{\label{fig-baseline_precip_std}Baseline model: domestic and
-foreign effects of precipitation standardised shocks on sectoral
-inflation}
+\caption{\label{fig-baseline_network_std}Network effects of weather
+shocks on sectoral inflation (standardised shocks)}
 
 \end{figure}%
 
